--- a/.editorconfig
+++ b/.editorconfig
@@ -15,3 +15,8 @@ indent_style = tab
 [{*.yaml,*.yml}]
 indent_style = space
 indent_size = 2
+
+[{*.html,*.css}]
+indent_style = space
+indent_size = 2
+trim_trailing_whitespace = true
