--- a/compose.yaml
+++ b/compose.yaml
@@ -6,7 +6,7 @@ services:
     container_name: quiethn-web
     restart: unless-stopped
     ports:
-      - 8080:80
+      - 8080:80/tcp
     environment:
       HN_REDIS_ADDR: quiethn-valkey:6379
     depends_on:
@@ -16,6 +16,8 @@ services:
     image: valkey/valkey:latest
     container_name: quiethn-valkey
     restart: unless-stopped
+    ports:
+      - 6379:6379/tcp
     volumes:
       - valkey_data:/data
       - ./valkey.conf:/etc/valkey/valkey.conf
