--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ services:
   quiethn-web:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: web.Dockerfile
     container_name: quiethn-web
     restart: unless-stopped
     ports:
@@ -20,8 +20,8 @@ services:
       - 6379:6379/tcp
     volumes:
       - valkey_data:/data
-      - ./valkey.dev.conf:/etc/valkey/valkey.conf
-    command: ["valkey-server", "/etc/valkey/valkey.conf"]
+      #- ./valkey.conf:/etc/valkey/valkey.conf
+    #command: ["valkey-server", "/etc/valkey/valkey.conf"]
     healthcheck:
       test: ["CMD", "redis-cli", "PING"]
       interval: 10s
