--- a/charts/quiethn/templates/02-secret.yaml
+++ b/charts/quiethn/templates/02-secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: {{ include "quiethn.secretName" . }}
 type: Opaque
 data:
-  redisPassword: {{ .Values.redis.password | b64enc | quote }}
+  redisPassword: {{ .Values.redis.password | b64enc }}
