--- a/charts/quiethn/templates/03-deployment.yaml
+++ b/charts/quiethn/templates/03-deployment.yaml
@@ -18,31 +18,10 @@ spec:
     spec:
       serviceAccountName: {{ include "quiethn.serviceAccountName" . }}
       containers:
-        - image: {{ .Values.deployment.quiethn.image }}
+        - image: {{ .Values.quiethnImage }}
           name: {{ include "quiethn.name" . }} 
           ports:
-            - containerPort: {{ .Values.deployment.quiethn.containerPort }}
+            - containerPort: {{ .Values.quiethn.port }}
               name: http
           env:
-            - name: HN_REDIS_ADDR
-              valueFrom:
-                configMapKeyRef:
-                  key: redisAddr
-                  name: {{ include "quiethn.configMapName" . }}
-            - name: HN_REDIS_DB
-              valueFrom:
-                configMapKeyRef:
-                  key: redisDb
-                  name: {{ include "quiethn.configMapName" . }}
-                  optional: true
-            - name: HN_REDIS_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  key: redisPassword 
-                  name: {{ include "quiethn.secretName" . }}
-            - name: HN_BASE_URL
-              valueFrom:
-                configMapKeyRef:
-                  key: hnAddr 
-                  name: {{ include "quiethn.configMapName" . }}
-                  optional: true
+            {{- include "quiethn.env" . | nindent 12 }}
