--- a/charts/quiethn/templates/05-cronjob.yaml
+++ b/charts/quiethn/templates/05-cronjob.yaml
@@ -16,29 +16,8 @@ spec:
         spec:
           restartPolicy: OnFailure
           containers:
-            - image: {{ .Values.updater.image }}
+            - image: {{ .Values.quiethnUpdaterImage }}
               name: updater 
               imagePullPolicy: Always
               env:
-                - name: HN_REDIS_ADDR
-                  valueFrom:
-                    configMapKeyRef:
-                      key: redisAddr
-                      name: {{ include "quiethn.configMapName" . }}
-                - name: HN_REDIS_DB
-                  valueFrom:
-                    configMapKeyRef:
-                      key: redisDb
-                      name: {{ include "quiethn.configMapName" . }}
-                      optional: true
-                - name: HN_REDIS_PASSWORD
-                  valueFrom:
-                    secretKeyRef:
-                      key: redisPassword 
-                      name: {{ include "quiethn.secretName" . }}
-                - name: HN_BASE_URL
-                  valueFrom:
-                    configMapKeyRef:
-                      key: hnAddr 
-                      name: {{ include "quiethn.configMapName" . }}
-                      optional: true
+                {{- include "quiethn.env" . | nindent 16 }}
