--- a/charts/quiethn/templates/02-configmap.yaml
+++ b/charts/quiethn/templates/02-configmap.yaml
@@ -5,10 +5,10 @@ metadata:
   labels:
     {{- include "quiethn.labels" . | nindent 4 }}
 data:
-  serverPort: {{ .Values.quiethn.port }}
+  serverPort: {{ .Values.quiethn.port | quote }}
   serverHost: {{ .Values.quiethn.host }}
   redisAddr: {{ .Values.redis.addr }}
-  redisDb: {{ .Values.redis.db | toString }}
+  redisDb: {{ .Values.redis.db | quote }}
   {{- with .Values.hackernewsBaseAddr }}
   hnAddr: {{ . }}
   {{- end }}
